pr-000592: Adding secrets for Advisor Mail, Variables for Bucket and  MasterOnline filter

--- a/modern.oc.advance/credentials.yaml
+++ b/modern.oc.advance/credentials.yaml
@@ -5,12 +5,12 @@ credentials:
       - usernamePassword:
           description: "GH-token"
           id: "GH-token"
-          password: ${githubToken}
+          password: ${secretGithubToken}
           scope: GLOBAL
-          username: ${githubUser}
+          username: ${secretGithubUser}
           usernameSecret: true
       - string:
           description: "GH-ST-token"
           id: "GH-ST-token"
           scope: GLOBAL
-          secret: ${githubToken}
+          secret: ${secretGithubToken}
