--- a/modern.oc.advance/jcasc-main.yaml
+++ b/modern.oc.advance/jcasc-main.yaml
@@ -75,8 +75,20 @@ masterprovisioning:
       spec:
         template:
           spec:
+            containers:
+              - name: jenkins
+                volumeMounts:
+                  - mountPath: /var/run/secrets/cbci-secrets
+                    name: oc-secrets
+                env:
+                  - name: SECRETS
+                    value: /var/run/secrets/cbci-secrets
             tolerations:
               - key: "dedicated"
                 operator: "Equal"
                 value: "cb-apps"
                 effect: "NoSchedule"
+            volumes:
+              - name: cbci-secrets
+                secret:
+                  secretName: cbci-secrets
