--- a/modern.oc.simple/bundle.yaml
+++ b/modern.oc.simple/bundle.yaml
@@ -2,10 +2,10 @@ apiVersion: "1"
 id: "modern.oc.simple"
 version: "1"
 jcasc:
-  - jcasc
+  - jcasc-main.yaml
 items:
-  - items
+  - items-root.yaml
 plugins:
-  - plugins
+  - plugins.yaml
 variables:
   - variables.yaml
